css/index.css
@import url("fonts.css");

html,
body {
    height: 100vh;
    width: 100vw;
}

.tiles-container {
    position: relative;
    max-width: 1300px;
}

.tile-row {
    width: 75%;
    position: relative;
    margin: 2rem 10px;
    border-radius: 2rem;
}

.row-megathon {
    background-color: rgb(228, 200, 129);
}
.row-fail {
    background-color: rgba(212, 49, 41, 47%);
}
.row-startup {
    color: white;
    background-color: #185a9d;
}

@media (max-width: 900px) {
    .tile-row {
        width: 100%;
        margin-left: 0;
        margin-right: 0;
    }

    .image img {
        margin: 0;
    }

    .stats-display {
        display: none;
    }

    .container-fluid.tiles-container .row {
        margin-top: 2rem !important;
        margin-bottom: 2rem !important;
    }
}

.para {
    max-width: 90vw;
    box-sizing: border-box;
    position: relative;
    border-radius: 10px;
    z-index: 1;
    width: 80%;
}
.image {
    box-sizing: border-box;
    z-index: 2;
    border-radius: 3px;
    width: 20%;
    height: 100%; /* this allows for all fancy alignments of the image */
    position: relative;
}

.stats-display {
    position: absolute;
}

.image-right,
.para-right,
.tile-row-right {
    float: right;
}
.image-left,
.para-left {
    float: left;
}

.para-head {
    font-weight: bold;
    margin-bottom: 1.2rem !important;
    color: #002142;
    font-family: "CustomHeading", sans-serif;
}

.row-startup .para-head {
    color: white;
}

.para-text {
    text-align: justify;
    font-size: 1.2rem;
    margin-top: 1.2rem !important;
    margin-bottom: 1.2rem !important;
}

.cta-btn {
    display: block;
    padding: 10px 60px;
    border-radius: 1.5rem;
    font-size: 1.5rem;
    margin-top: 1.2rem !important;
    background: #185a9d;
    /* background: linear-gradient(90deg, #185a9d, #43cea2); */
    color: white;
}

.row-fail .cta-btn {
    margin-left: 60% !important;
}

/* at small device, remove image and display text full center */
@media (max-width: 550px) {
    .para {
        width: 100%;
        max-width: 100%;
    }
    .image {
        display: none;
    }
    .para-head {
        text-align: center;
    }
    .cta-btn {
        margin: 1.2rem auto 3rem auto !important;
    }
}

/* Specific positioning */
.megathon-image {
    margin-left: 30%;
    margin-top: -30%;
}

.stats-display-megathon {
    right: 0;
    bottom: -15%;
    color: #185a9d;
}
.stats-display-fail {
    width: fit-content;
    left: 3%;
    bottom: -13%;
    color: #185a9d;
}
.stats-display-startup {
    width: fit-content;
    right: 3%;
    bottom: -13%;
    color: #185a9d;
}

.row-megathon {
    background-color: rgba(40, 205, 193, 0.47);
}

/* add extra margin due to stats display */
.row-fail {
    margin-top: calc(2rem + 4%);
    margin-bottom: calc(2rem + 4%);
}

/* Testimonial box */

.testimonial-container {
    width: 90%;
    max-width: 750px;
    margin: 4rem auto;
    padding: 2rem 0;
    border: 8px solid teal;
    border-radius: 2rem;
}

.testimonial-container .profilepic {
    width: 50px;
    height: 50px;
}

.testimonial-container .person-info > div,
.testimonial-container .text {
    margin: 0 auto;
    text-align: center;
    width: fit-content;
}

.testimonial-container .profilepic img {
    width: 100%;
    height: 100%;
}

.carousel-inner {
    height: 100%;
    width: 70%;
    margin: 0 auto;
}

.carousel-item {
    height: 100%;
    background-color: white;
}

.person-info {
    max-width: 40%;
    width: fit-content;
    margin: 0 auto;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    filter: invert(1);
}

.testimonial-container .text {
    font-size: 2rem;
}

@media (max-width: 600px) {
    .testimonial-container .text {
        font-size: 1rem;
    }
}

.testimonial-container .person-info .profilepic {
    width: 75px;
    height: 75px;
}

.testimonial-container .person-info .name,
.testimonial-container .person-info .designation {
    font-weight: bold;
    font-size: 1.5rem;
}

